# gas-storages

./: .gitignore  pyproject.toml  pytest.ini
data/: storages.json
gas_storage/: gas_price_simulations.py
gas_storage/core/: gas_storage.py  gs_optim_tools.py
gas_storage/legacy/: Main.py  utils.py
gas_storage/legacy/authentication/: msal_auth.py
gas_storage/legacy/core/: gs_optim.py
gas_storage/legacy/pages/: 1_Prices.py  2_Storages.py  3_Optimize.py  4_Export.py  5_Graphs.py
notebooks/: archive.ipynb  gas_storage.ipynb  gas_storage_lscm.ipynb  gas_storage_milp.ipynb  gas_storage_testing.ipynb  nnn.ipynb  oh_process.ipynb  price_analysis.ipynb  toy_gas_storage.ipynb  wiener.ipynb
notebooks/legacy/: optim.ipynb
tests/: test_storage_optimization.py
