[project]
name = "gas-storage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nbstripout>=0.9.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "polars>=1.38.1",
    "pyomo>=6.9.5",
    "pytest>=9.0.2",
]

[dependency-groups]
dev = [
    "black[jupyter]>=26.1.0",
    "bumpver>=2025.1131",
    "ipykernel>=7.0.0",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "nbqa>=1.9.1",
    "pip-audit>=2.10.0",
    "ruff>=0.15.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gas_storage"]


# ---------- Bumpver -------------------------------------------------------
[tool.bumpver]
current_version = "0.5.31"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version} [skip ci on heads]"
commit = true
tag = true
push = true
pre_commit_hook="bumpver-pre-commit-hook.sh"

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{pep440_version}"',
]
"short_term_forecast_power/__init__.py" = [
    '__version__ = "{pep440_version}"',
]

# ---------- Ruff -----------------------------------------------------------
[tool.ruff]
line-length = 88
indent-width = 4
show-fixes = true
src = ["short_term_forecast_power", "tests"]
exclude = [
    "short_term_forecast_power/legacy", "notebooks"
]

[tool.ruff.lint]
select = [
    "F",    # pyflakes (core of flake8)
    "E",    # pycodestyle (error codes)
    "W",    # pycodestyle (warnings)
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "TCH",  # type-checking rules (lightweight mypy)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "ERA",  # eradicate (detect commented out code)
]
fixable = ["I", "F401", "F841", "E", "W"]
unfixable = ["B", "N", "C4", "TCH", "SIM", "TID", "ERA"]
ignore = ["E266", "E203"]

[tool.ruff.lint.isort]
force-sort-within-sections = true  # sorts by module, independent of import style (`import` or `from`)
force-single-line = false
lines-between-types = 1  # equivalent to lines_between_sections
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"  # PEP 8 recommends using spaces for indentation
skip-magic-trailing-comma = false
docstring-code-format = true  # formats code in docstrings in case you added a coding example

# ---------- Mypy ---------------------------------------------------------
[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
cache_dir = ".cache/mypy/"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "yaml",
    "pytz.*",
    "requests.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "short_term_forecast_power.evaluate.*",
    "short_term_forecast_power.legacy.*",
]
ignore_errors = true

# ---------- Linters -------------------------------------------------------
[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
known_standard_library = ["dataclasses", "typing_extensions"]
force_to_top = ["typing"]
profile = "black"
lines_between_sections = 1
lines_after_imports = 2
line_length = 88
force_sort_within_sections = true
